--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
 	<h1>Educator. Leader. Coach [Roach].</h1>
 	<h3>Teaching Portfolio of Meghan Roach</h3>
-	<p>For the past five years, Meghan worked with the NYC Department of Education as teacher, team leader, and activities coordinator. DELETE!!!!!</p>
+	<p>For the past five years, Meghan worked with the NYC Department of Education as teacher, team leader, and activities coordinator.</p>
 </body>
 </html>
