--- a/index.html
+++ b/index.html
@@ -1,25 +1,22 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="style.css">
 <head>
 	<title>School for Global Leaders</title>
 	<h1>School for Global Leaders</h1>
-	<img src="chalkboard.jpg">
+	
 </head>
 <body>
 	<h3 id="slogan">Learn to Change the World.</h3>	
 	<h3> Rigor - Leadership - Community</h3>
 	<p>Located on the Lower East Side, School for Global Leaders is a middle school that redefining education.  Students are immersed in rigorous academics, while their social development is fostered through community building courses.</p>
 	<p>School for Global Leaders offers a variety of programs including:</p>
-	<ul>
-		<li>Integrated Projects Week</li>
-		<li>Advisory Programs</li>
-		<li>SONYC After School</li>
-		<li>Regents Courses</li>
-		<li>Boys' Sports: Football, Basketball, Baseball</li>
-		<li>Girls' Sports: Volleyball, Basketball, Softball</li>
-		<li>Drama</li>
-	</ul>
-
+		<p>Integrated Projects Week</p>
+		<p>Advisory Programs</p>
+		<p>SONYC After School</p>
+		<p>Regents Courses</p>
+		<p>Boys' Sports: Football, Basketball, Baseball</p>
+		<p>Girls' Sports: Volleyball, Basketball, Softball</p>
+		<p>Drama</p>
 </body>
 </html>
